# growth-stock-screener

./: .gitignore  LICENSE  README.md  app.py  package-lock.json  package.json  pyproject.toml  relative_strength.py  requirements.txt  screen_results 2023-08-06 22-47-00
Prototyping/: data_sources.txt  relative_strength_calculator.py  sales_strength_calculator.py  screen.py  stage_two.py
backend/json/: institutional_accumulation.json  liquidity.json  nasdaq_listings.json  relative_strengths.json  revenue_growth.json  trend.json
backend/src/: helper_functions.py  institutional_accumulation.py  institutional_holdings.py  liquidity.py  nasdaq_listings.py  relative_strength.py  relative_strengths.py  revenue_growth.py  test.py  trend.py
backend/src/utils/: concurrency.py  logs.py  scraping.py  sec-requests.py  sec_requests.py
backend/tests/: helper_tests.py
growth_stock_screener/: run_screen.py
growth_stock_screener/iterations/: institutional_accumulation.py  nasdaq_listings.py  relative_strength.py  revenue_growth.py  trend.py
growth_stock_screener/iterations/utils/: __init__.py  concurrency.py  logs.py  sec_requests.py  (+1 more)
growth_stock_screener/json/: README.md  institutional_accumulation.json  liquidity.json  nasdaq_listings.json  relative_strengths.json  revenue_growth.json  trend.json
growth_stock_screener/screen/: settings.py
src/: nasdaq_listings.py
src/growth_stock_screener/: liquidity.py  relative_strength.py  revenue_growth.py  trend.py
src/tests/: helper_tests.py
tests/: calculation_tests.py  test_calculations.py  test_version_checking.py
(+20 files in other folders)
